[package]
name = "ccnd"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-python = "0.20"
petgraph = "0.6"
futures = "0.3"

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]
